The Cascade-Fix Final

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Project HTML</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna Verdi al Forno</a></li>
-        <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+    <ul class="list">
+        <li><p><a href="recipes/lasagna.html">Lasagna Verdi al Forno</a></p></li>
+        <li><p><a href="recipes/pizza.html">Pizza</a></p></li>
+        <li><p><a href="recipes/spaghetti.html">Spaghetti</a></p></li>
             
     </ul>
     
