--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <link rel="stylesheet" href="../css/style_lasagna.css">
+    <title>Lasagne</title>
 </head>
 
 <body>
 
-<h1>Lasagne Verdi al Forno</h1>
+<h1 class="title">Lasagne Verdi al Forno</h1>
 
-<img src="../images/lasagne.webp" alt="Lasagne Verdi al Forno" height="300" width="300">
 
-<h2>Description</h2>
+<img class="lasagne_img" src="../images/lasagne.webp"  alt="Lasagne Verdi al Forno" height="300" width="300">
+
+<div class="description">
+<h2 class="title">Description</h2>
 
 <p>A recipe from Emliia-Romagna, Italy. This lasagne verde is made with spinach pasta. It's excellent if you want to impress some guests — or even yourself.</p>
+</div>
 
-<h2>Ingredients</h2>
+<div class="ingredients">
+<h2 class="title">Ingredients</h2>
+
 
 <p>
     <strong>Pasta:</strong>
@@ -52,8 +58,10 @@
         <li>3 tablespoons butter</li>
     </ul>
 </p>
+</div>
 
-<h2>Directions</h2>
+<div class ="directions">
+<h2 class="title">Directions</h2>
 
 <p>
     <ol>
@@ -61,7 +69,7 @@
         <li><p><strong>Make ragu:</strong> In a large skillet, melt butter over medium-high heat. Cook and stir carrot, celery, onion, and bacon in hot butter until onion is translucent. Stir in pork, beef, and ham; cook and stir until crumbly and browned. Stir in beef stock, tomato paste, and oregano. Season with salt and pepper. Reduce heat to low, cover, and simmer for 20 minutes.</p></li>
         <li><p>While ragu is simmering, make béchamel: Combine butter and flour in a medium saucepan over medium-low heat. Whisk to make a roux. Remove from heat, let rest for 1 minute, then whisk in warm milk. Return to heat and simmer for 10 minutes, stirring constantly, until thickened. Season with salt and nutmeg. Remove from heat.</p></li>
         <li><p><strong>Cook pasta:</strong> Prepare an ice bath. Bring a large pot of lightly salted water to a boil. On a floured surface, divide pasta dough into 3 portions. Roll each portion out to a thin sheet. Cook each pasta sheet in boiling water for 3 minutes; remove and dip in ice water; drain and dry on a clean cloth.</p></li>
-        <li><p><strong>inish ragu:</strong>F Stir chicken livers into simmering sauce. Cook for 1 minute, remove from heat, and set aside.</p></li>
+        <li><p><strong>Finish ragu:</strong>Stir chicken livers into simmering sauce. Cook for 1 minute, remove from heat, and set aside.</p></li>
         <li><p>Preheat the oven to 400 degrees F (200 degrees C). Grease a 9x13-inch baking dish.</p></li>
         <li><p><strong>Assemble lasagna:</strong> Place 1 pasta sheet in the bottom of the prepared baking dish. Spread 1/3 of the ragu, 1/4 of the béchamel, 1/3 of the ricotta, and 1/4 of the Parmesan over pasta. Repeat layers twice. Top with remaining béchamel and Parmesan; dot with butter.</p></li>
         <li><p>Bake in the preheated oven until the top is golden brown, about 30 minutes.</p></li>
@@ -70,6 +78,6 @@
     
 </p>
 
-
+</div>
 </body>
 </html>
