--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style_spaghetti.css">
     <title>Homemade Spaghetti</title>
 </head>
 
 <body>
 
-<h1>Homemade Spaghetti</h1>    
-<img src="../images/spaghetti.webp" alt="Homemade Spaghetti" Height="300" width="300">
+<h1 class="title">Homemade Spaghetti</h1>    
+<img class="spaghetti_img" src="../images/spaghetti.webp" alt="Homemade Spaghetti" Height="300" width="300">
 
-<h2>Description</h2>
+<div class="description">
+<h2 class="title">Description</h2>
 
 <p>This recipe has been handed down from my mother. It is a family favorite and will not be replaced! (Definite husband pleaser!) Serve over any variety of hot cooked pasta.</p>
+</div>
 
-<h1>Ingredients</h1>
+<div class="ingredients">
+<h1 class="title">Ingredients</h1>
 
 <p>
     <ul>
@@ -33,8 +37,10 @@
 
     </ul>
 </p>
+</div>
 
-<h2>Directions</h2>
+<div class="directions">
+<h2 class="title">Directions</h2>
 
 <p>
     <ol>
@@ -45,6 +51,7 @@
 
     </ol>
 </p>
+</div>
 
 </body>
 </html>
